src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Due_Diligence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An Account Due Diligence document has been added to this account</description>
        <inlineHelpText>If you have completed an Account Due Diligence Document and attached it to your Account Record (as a Word doc) you can select this box in order to ensure you get credit for your efforts.</inlineHelpText>
        <label>Account Due Diligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ID_Full__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID_Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to provide lookup feature in the tracking sheet</description>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_AMEC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager AMEC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_Americas_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager EMEA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_EMEA_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_GC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager GC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_GC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Japan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Japan</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_Japan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Korea_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Korea 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_Korea_2_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Korea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Korea</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_Korea_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_SAP_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager SAP 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_SAP_2_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_SAP_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager SAP 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_SAP_3_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_SAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager SAP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_SAP_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Account Manager for DW to Revenue Tracking</description>
        <label>(NOT USED) Account Manager Global</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_prechild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_LENGTH__c</fullName>
        <formula>LEN( Name )</formula>
        <label>Account Name LENGTH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Toggle_Code_Parent__c</fullName>
        <formula>AND( Address_Toggle_Code__c != null , Address_Toggle_Code__c = Parent.Address_Toggle_Code__c )</formula>
        <label>Address Toggle Code Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Toggle_Code__c</fullName>
        <label>Address Toggle Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Toggle_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Toggle Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asse_Comm_Prob__c</fullName>
        <label>Asse. Commit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asse_Lost_Prob__c</fullName>
        <label>Asse. Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Update_Fulfillment_Channel_by_CACC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Update Fulfillment Channel by CACC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automotive_OEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automotive OEM</description>
        <inlineHelpText>To indicate that the account is an &quot;Automotive OEM&quot;</inlineHelpText>
        <label>Automotive OEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMD_Industry_Segment__c</fullName>
        <description>Customer Buying Group</description>
        <inlineHelpText>Customer Buying Group</inlineHelpText>
        <label>CBG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Id__c</fullName>
        <description>This field will store 18 digit Id of the CMD Request record so that we can connect Customer record with CMD Request.</description>
        <label>CMD Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_URL__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  CMD_Request_Id__c , &apos;View CMD Request&apos; , &apos;new&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMD Request URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Short_Name__c</fullName>
        <description>CMD Short Name</description>
        <inlineHelpText>CMD Short Name. It&apos;s carried from GCM.</inlineHelpText>
        <label>GCM Short Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Sub_Segment__c</fullName>
        <description>Sub-Customer Buying Group</description>
        <inlineHelpText>Sub-Customer Buying Group</inlineHelpText>
        <label>Sub-CBG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Parent__c</fullName>
        <formula>Parent.City__c</formula>
        <label>City Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Customer address - city</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Account_Code__c</fullName>
        <formula>CASE(
     RecordType.Name,
    &apos;Parent Account&apos;, NXP_Global_ID__r.Consolidated_Account_Code__c , 
    &apos;Child Account&apos;, NXP_Global_ID__r.Consolidated_Account_Code__c ,
    &apos;&apos;
)</formula>
        <inlineHelpText>Consolidated Account Code (CACC) attach to the parent account</inlineHelpText>
        <label>Consolidated Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_Id__c</fullName>
        <description>Converted Lead Id</description>
        <label>Converted Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_LastModifiedDate__c</fullName>
        <description>For data cleansing project
GSAS internal use</description>
        <label>Country Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Parent__c</fullName>
        <formula>TEXT(Parent.Country__c)</formula>
        <label>Country Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Customer address - country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <description>Former &quot;Account Classification&quot; Field</description>
        <inlineHelpText>T1:Rev in 100s M$/ $100Ms growth over 3 yrs 
T2:Rev in 20-100M$/$50Ms growth over 3 yrs 
T3:Rev 3-20M$/$5M growth over 3 yrs
T4 TMMA:supported by both NXP FSE &amp; Disti
T4 RoM:supported by Disti, lead by NXP manager
T4 Longtail:catalog/web user/startup</inlineHelpText>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - Long Tail</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - ROM</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - TMMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category_of_Parent__c</fullName>
        <formula>TEXT(Parent.Customer_Category__c)</formula>
        <label>Customer Category of Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Category_same_as_Parent__c</fullName>
        <formula>TEXT(Customer_Category__c)  =  TEXT(Parent.Customer_Category__c)</formula>
        <label>Customer Category same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Corporate_Code__c</fullName>
        <description>SIR 647, used for FSL data migration.</description>
        <label>Customer Corporate Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Corporate_Description__c</fullName>
        <description>SIR 647, used for FSL data migration.</description>
        <label>Customer Corporate Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Verified__c</fullName>
        <inlineHelpText>Indicate if customer information is found and the degree of match in Hoovers D&amp;B database.
Compare the following parameters: legal name, street, city, zipcode, country.</inlineHelpText>
        <label>DNB Verified ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNB Accepted</fullName>
                </value>
                <value>
                    <fullName>DNB Rejected: Not Found</fullName>
                </value>
                <value>
                    <fullName>DNB Rejected: Poor Match</fullName>
                </value>
                <value>
                    <fullName>DNB Accepted: Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_NOT_MIGRATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary flag for data migration process</description>
        <label>DO NOT MIGRATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>Dun and Bradstreet Number</description>
        <inlineHelpText>DUNS # from Hoovers D&amp;B database</inlineHelpText>
        <label>DUNS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Parent__c</fullName>
        <formula>Parent.DUNS_Number__c</formula>
        <label>DUNS Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Ultimate__c</fullName>
        <description>Duns and Bradstreet Global Ultimate Name</description>
        <label>DUNS Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_to_Revenue_Rate__c</fullName>
        <inlineHelpText>Stores the fraction of the opportunty claim value being converted into revenue, averaged over all won opportunties for this PArent Account. Is applied to all opportunties upon creation. Calculated yearly based on 2 years history. Reapplied yearly.</inlineHelpText>
        <label>DW to Revenue Rate</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>D_B_Account_Name__c</fullName>
        <label>D&amp;B Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Annual_Revenue__c</fullName>
        <label>D&amp;B Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_B_City__c</fullName>
        <label>D&amp;B City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Country__c</fullName>
        <label>D&amp;B Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Employees__c</fullName>
        <label>D&amp;B Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Global_Ultimate_Company_Name__c</fullName>
        <label>D&amp;B Global Ultimate Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_NAICS_Code__c</fullName>
        <label>D&amp;B NAICS Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_NAICS_code_Description__c</fullName>
        <label>D&amp;B NAICS code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Number__c</fullName>
        <label>D&amp;B Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Officer__c</fullName>
        <label>D&amp;B Officer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Rating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_SIC_Code_Description__c</fullName>
        <label>D&amp;B SIC Code Description</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_SIC_Code__c</fullName>
        <label>D&amp;B SIC Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Score__c</fullName>
        <label>D&amp;B Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_State_Province__c</fullName>
        <label>D&amp;B State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Street__c</fullName>
        <label>D&amp;B Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_ZIP_Postal_Code__c</fullName>
        <label>D&amp;B ZIP/Postal Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration_ID_Parent__c</fullName>
        <formula>IF( ParentId != NULL , Parent.Data_Migration_Id__c , Data_Migration_Id__c  )</formula>
        <label>Data Migration ID of Parent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Data Migration Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deci_Comm_Prob__c</fullName>
        <label>Deci. Commit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deci_Lost_Prob__c</fullName>
        <label>Deci. Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Rejection__c</fullName>
        <description>Please provide a reason for rejecting the D&amp;B data.</description>
        <inlineHelpText>Please provide any additional information for rejecting the D&amp;B data so that we can ensure we get the correct D&amp;B company.</inlineHelpText>
        <label>Description of Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disc_Comm_Prob__c</fullName>
        <label>Disc. Commit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disc_Lost_Prob__c</fullName>
        <label>Disc. Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Customer email contact</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <formula>IF(  Parent.Id != NULL ,  Parent.Name , Name )</formula>
        <label>Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Old__c</fullName>
        <description>The originally formatted fax number before the data cleansing</description>
        <label>Fax Old</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Degree_Parent_Short_Name__c</fullName>
        <formula>NXP_Global_ID__r.First_Degree_Parent_Account_Name__c</formula>
        <inlineHelpText>If there is Parent Division, the 1st-Degree Parent of this Location will be that Parent Division. 
Otherwise, the 1st-Degree Parent of this Location will be NXP Ultimate Parent.</inlineHelpText>
        <label>First-Degree Parent Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Channel__c</fullName>
        <inlineHelpText>The channel type the customer comes through.</inlineHelpText>
        <label>Fulfillment Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Enterprise_Id__c</fullName>
        <formula>Parent.Customer_Id__c</formula>
        <label>Global Enterprise Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <inlineHelpText>Part of customer address.</inlineHelpText>
        <label>z_OBSOLETED_House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <formula>LEFT( Name , 1)</formula>
        <label>Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Segment_2013__c</fullName>
        <label>Industry Segment 2013</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Segment Approval Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>Computing</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Energy Management</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Home/Building Automation (HABA)</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Secure Identity</fullName>
                </value>
                <value>
                    <fullName>Secure Transactions</fullName>
                </value>
                <value>
                    <fullName>Tagging &amp; Authentication</fullName>
                </value>
                <value>
                    <fullName>Wireless Infrastructure and RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Segment_different_from_Parent__c</fullName>
        <formula>AND(
 Parent.Id != null
,
TEXT(Industry_Segment__c) &lt;&gt; TEXT(Parent.Industry_Segment__c)
)</formula>
        <label>Industry Segment different from Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Init_Comm_Prob__c</fullName>
        <label>Init. Commit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Init_Lost_Prob__c</fullName>
        <label>Init. Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsInactive_Parent__c</fullName>
        <formula>Parent.IsInactive__c</formula>
        <label>Inactive Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>An indicator to denote the account&apos;s current status.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a field which is mapped from the Lead when it is converted</description>
        <label>Lead Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Legacy Id from FSL</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <inlineHelpText>Customer&apos;s Legal Name</inlineHelpText>
        <label>Legal Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Cust1_Cd__c</fullName>
        <description>SIR647</description>
        <label>Logical Cust1 Cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Cust1_Desc__c</fullName>
        <description>SIR 647, used for FSL data migration.</description>
        <label>Logical Cust1 Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Cust2_Cd__c</fullName>
        <label>Logical Cust2 Cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Cust2_Desc__c</fullName>
        <description>SIR 647, used for FSL data migration.</description>
        <label>Logical Cust2 Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_2013__c</fullName>
        <description>Legacy Market Segment prior 2013 CMD Project</description>
        <label>Market Segment 2013</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Market Segment for Segment Approvals</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances, Energy and Automation</fullName>
                </value>
                <value>
                    <fullName>Automotive and Transportation</fullName>
                </value>
                <value>
                    <fullName>Computing</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Identification and Authentication</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Wireless Infrastructure and RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <inlineHelpText>NAICS code from DUNS (The North America Industry Classification System (NAICS) is used by business and governments to classify and measure economic activity in the United States, Canada, and Mexico).</inlineHelpText>
        <label>NAICS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00 - No found</fullName>
                </value>
                <value>
                    <fullName>11 - Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>21 - Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>22 - Utilities</fullName>
                </value>
                <value>
                    <fullName>23 - Construction</fullName>
                </value>
                <value>
                    <fullName>31 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>32 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>33 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>42 - Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>44 - Retail Trade</fullName>
                </value>
                <value>
                    <fullName>45 - Retail Trade</fullName>
                </value>
                <value>
                    <fullName>48 - Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>49 - Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>51 - Information</fullName>
                </value>
                <value>
                    <fullName>52 - Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>53 - Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>54 - Professional, Scientific, and Technical Services</fullName>
                </value>
                <value>
                    <fullName>55 - Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>56 - Administrative, Support , Waste Management , Remediation Services</fullName>
                </value>
                <value>
                    <fullName>61 - Educational Services</fullName>
                </value>
                <value>
                    <fullName>62 - Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>71 - Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>72 - Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>81 - Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>92 - Public Administration</fullName>
                </value>
                <value>
                    <fullName>99 - Unclassified Establishments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <description>NAICS Description</description>
        <label>NAICS Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>